# movie_finder

./: .gitignore  .gitmodules  Dockerfile-database  Dockerfile-sparqle-query  README.md  docker-compose-tooling.yml  docker-compose.yml
_old/: Dockerfile  common.py  docker-compose.yml  main.py  sparqle_query0.py  sparqle_query1.py  sparqle_query_run.py
backend/: Dockerfile  database.py  docker-compose.yml  go.sh  main.py  requirements.txt
cli/: Cargo.toml
cli/src/: main.rs
commands/: admin.sh  admin_root.sh  build_data.sh  deploy.sh  deploy_remote.sh  remote_logs.sh  renew_certificate.sh  run.sh  run_remote.sh  tail_raw.sh  test.sh  test_remote.sh
data_builder/: Dockerfile  _go.sh  _main.sh  _todo_movie_genre  cast_member_label.py  common.py  composer_label.py  director_label.py  docker-compose.yml  film_cast_member.py  film_director.py  film_image.py  film_imdb.py  film_label.py  film_omdb.py  film_publication.py  film_voice_actor.py  main copy.py  main.py  misc.py  occupation.py  old.py  professions.py  pylintrc  rdf_to_sql.py  requirements.txt  screenwriter_label.py  social_status.py  v2.py  wip.sparql
data_builders/: action.py  activity.py  human_activity.py  occupation.py  professions.py  social_status.py
database/: docker-compose.yml  go.sh  go_inner.template  init_1.template  init_2.sql
database_client/: 01.sql  02.sql  03.sql  04.sql  05.sql  06.sql  07.alq  07_json.sql  07_table.sql  08.alq  09.alq  (+22 more)
server/: Cargo.toml  movie_links_imdb.csv  omdb_images.csv
server/src/: data.rs  data_2.rs  load.rs  main.rs  search.rs
server/src/test/: a.rs
(+99 files in other folders)
