[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["derive"] }
rust_helpers = { path = "../submodules/rust_helpers" }
tokio = { version = "*", features = ["full"] }
reqwest = "*"
error-chain = "*"
form_urlencoded = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
async-recursion = "*"
