[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "*"
actix-files = "*"
serde_json = "*"
serde = { version = "*", features = ["derive"] }
rand = "*"
reqwest = { version = "*", features = ["blocking"] }
csv = "*"
actix-cors = "*"